PYIC-3387 Change function name and update contents to align with state machine changes